--- a/Views/Sklep/SklepFormularz.cshtml
+++ b/Views/Sklep/SklepFormularz.cshtml
@@ -1,4 +1,5 @@
-﻿@model KartaPracy.ViewModels.SklepViewModel
+﻿@using KartaPracy.Models
+@model KartaPracy.ViewModels.SklepViewModel
 
 @{
     ViewBag.Title = Model.Tytul;
@@ -10,22 +11,29 @@
 {
     <div class="form-group">
         @Html.LabelFor(s => s.Sklep.Nazwa)
-        @Html.TextBoxFor(s => s.Sklep.Nazwa, new { @class = "form-control" })
+        @Html.TextBoxFor(s => s.Sklep.Nazwa, new {@class = "form-control"})
         @Html.ValidationMessageFor(s => s.Sklep.Nazwa)
-
     </div>
+
     <div class="form-group">
+        @Html.LabelFor(s => s.Sklep.Nip)
+        @Html.TextBoxFor(s => s.Sklep.Nip, new {@class = "form-control"})
+    </div>
+
+    <div class="form-group">
+        
         @Html.LabelFor(s => s.Sklep.KontaktId)
-        @Html.DropDownListFor(s => s.Sklep.KontaktId, new SelectList(Model.Kontakts, "Id", "Nazwisko"), "Wybierz osobę do kontaktu", new { @class = "form-control" })
+        <p>@Html.ActionLink("Jeśli nie ma na liście dodaj nową osobę", "New", "Kontakt", null, new { @class = "btn btn-primary" })</p>
+        @Html.DropDownListFor(s => s.Sklep.KontaktId, new SelectList(Model.Kontakts, "Id", "Nazwisko"), "Wybierz osobę do kontaktu", new {@class = "form-control"})
         @Html.ValidationMessageFor(s => s.Sklep.KontaktId)
     </div>
 
-    @*<div class="form-group">
-        @Html.LabelFor(s => s.Sklep.FormatSklep)
-        @Html.DropDownListFor(s => s.Sklep.FormatSklepu, new SelectList(Model.Sklep.FormatSklepu), "Wybierz format", new { @class = "form-control" })
+    <div class="form-group">
+        @Html.LabelFor(s => s.Sklep.FormatSklepuId)
+        @Html.DropDownListFor(s => s.Sklep.FormatSklepuId, new SelectList(Model.FormatSklepus, "Id", "JakiFormatSklepu"), "Wybierz format sklepu", new { @class = "form-control" })
         
-
-    </div>*@
+        @Html.ValidationMessageFor(s => s.Sklep.FormatSklepuId)
+    </div>
 
     @Html.HiddenFor(s => s.Sklep.Id)
     <button type="submit" class="btn btn-primary">Save</button>
