--- a/Views/Sklep/Index.cshtml
+++ b/Views/Sklep/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model System.Collections.Generic.List<KartaPracy.Models.Sklep>
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Sklepy";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
     <h2>Sklepy</h2>
