--- a/Views/Kontakt/KontaktFormularz.cshtml
+++ b/Views/Kontakt/KontaktFormularz.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewBag.Title = "KontaktFormularz";
     Layout = "~/Views/Shared/_Layout.cshtml";
+   
 }
 
 
@@ -34,5 +35,5 @@
         @Html.TextBoxFor(s => s.Kontakt.OsobaDoKontaktu, new {@class = "form-control"})
     </div>
     @Html.HiddenFor(s => s.Kontakt.Id)
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary">Zapisz</button>
 }
