--- a/Views/Sklep/Details.cshtml
+++ b/Views/Sklep/Details.cshtml
@@ -6,6 +6,7 @@
 }
 
 <!DOCTYPE html>
+<h2>Informacje o sklepie @Model.Nazwa</h2>
 
 <html>
     <head>
@@ -13,7 +14,18 @@
     </head>
     <body>
         <div>
-              
+            <ul>
+               
+                <li> Nip sklepu: @Model.Nip</li>
+                <li> Format sklepu: @Model.FormatSklepu.JakiFormatSklepu</li>
+                <h3>Kontakt do sklepu</h3>
+                <li> Imię i Nazwisko: @Model.Kontakt.Nazwisko</li>
+                <li>Telefon: @Model.Kontakt.Telefon</li>
+                <li>Email: @Model.Kontakt.Email</li>
+                <li>Opis: @Model.Kontakt.Opis</li>
+                <li>Inna osoba do kontaktu: @Model.Kontakt.OsobaDoKontaktu</li>
+
+            </ul> 
         </div>
     </body>
 </html>
