--- a/Views/Shared/_NAvBar.cshtml
+++ b/Views/Shared/_NAvBar.cshtml
@@ -6,11 +6,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Karta Pracy", "Index", "KartaKontaktu", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Plan Pracy", "Index", "Home")</li>
                     <li>@Html.ActionLink("Sklepy", "Index", "Sklep")</li>
                     <li>@Html.ActionLink("Kontakt", "Index", "Kontakt")</li>
                 </ul>
