Zdarzenie formularz cd.

--- a/Views/KartaKontaktu/ZdarzenieFormularz.cshtml
+++ b/Views/KartaKontaktu/ZdarzenieFormularz.cshtml
@@ -8,70 +8,69 @@
 
 
 <!DOCTYPE html>
-
+<link href="~/Content/bootstrap-datetimepicker.css" rel="stylesheet" />
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    
-   
-   
-</head>
+    <script type="text/javascript" src="/scripts/jquery.min.js"></script>
+    <script type="text/javascript" src="/scripts/moment.min.js"></script>
+    <script type="text/javascript" src="/scripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/scripts/bootstrap-datetimepicker.*js"></script>
+ </head>
 <body>
 
-  
+
 
     <h2>@Model.Tytul</h2>
     @using (@Html.BeginForm("Save", "KartaKontaktu"))
     {
         <div class="form-group">
-            @Html.LabelFor(s => s.KartaKontaktu.Id)
-
-        </div>
-
-        <div class="form-group">
-
             @Html.LabelFor(s => s.KartaKontaktu.SklepId)
-
             @Html.DropDownListFor(s => s.KartaKontaktu.SklepId, new SelectList(Model.Skleps, "Id", "Nazwa"), "Wybierz sklep", new { @class = "form-control" })
             @Html.ValidationMessageFor(s => s.KartaKontaktu.Id)
         </div>
 
+        <div class="form-group">
+            @Html.LabelFor(s => s.KartaKontaktu.DataSpotkania)
+            <div class="input-group timeText" id="datetime1">
+
+                @Html.EditorFor(model => model.KartaKontaktu.DataSpotkania, new {htmlAttributes = new {@class = "form-control starttimecss"}})
+                <span class="input-group-addon text-pointer">
+                    <span class="glyphicon glyphicon-time"></span>
+                </span>
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(s => s.KartaKontaktu.Notatki)
-            @Html.TextBoxFor(s => s.KartaKontaktu.Notatki, new { @class = "form-control" })
+            @Html.TextAreaFor(s => s.KartaKontaktu.Notatki, new { @class = "form-control" })
         </div>
-
-        <div class="input-group timeText" id="datetime1">
-            @Html.EditorFor(model => model.KartaKontaktu.DataSpotkania, new { htmlAttributes = new { @class = "form-control starttimecss" } })
-            <span class="input-group-addon text-pointer ">
-                <span class="glyphicon glyphicon-time"></span>
-            </span>
+        <div class="form-group">
+            <p> @Html.RadioButtonFor(m => m.KartaKontaktu.FormaKontaktu, "Email")E-mail</p>
+            <p> @Html.RadioButtonFor(m => m.KartaKontaktu.FormaKontaktu, "Telefon")Telefon</p>
+            <p> @Html.RadioButtonFor(m => m.KartaKontaktu.FormaKontaktu, "Spotkanie")Spotkanie</p>
         </div>
-        <br/>
-        @Html.HiddenFor(s => s.KartaKontaktu.Id)
-        <button type="submit" class="btn btn-primary">Save</button>
+        <br />
+            @Html.HiddenFor(s => s.KartaKontaktu.Id)
+            <button type="submit" class="btn btn-primary">Zapisz</button>
     }
+   
 
-    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet"/>
     @section scripts
     {
+        <script src="~/Scripts/pl.js"></script>
+        <script type="text/javascript">
+            $(function () {
+                $('#datetime1').datetimepicker({
+                    locale: 'pl'
+                   
+                });
 
-    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.js"></script>
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/bootstrap-datetimepicker.css" rel="stylesheet" />
+            });
+        </script>
 
-    <script type="text/javascript">
-    $(function () {
-        $('#datetime1').datetimepicker({
-          locale: 'pl'
-    });
-      
-    });
-    </script>
-      
     }
 </body>
+
 </html>
 
