Dodanie trochę walidacji

--- a/Views/Shared/_NAvBar.cshtml
+++ b/Views/Shared/_NAvBar.cshtml
@@ -10,7 +10,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Plan Pracy", "Index", "Home")</li>
+                    @*<li>@Html.ActionLink("Plan Pracy", "Index", "Home")</li>*@
                     <li>@Html.ActionLink("Sklepy", "Index", "Sklep")</li>
                     <li>@Html.ActionLink("Kontakt", "Index", "Kontakt")</li>
                 </ul>
