--- a/Views/KartaKontaktu/ZdarzenieFormularz.cshtml
+++ b/Views/KartaKontaktu/ZdarzenieFormularz.cshtml
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(s => s.KartaKontaktu.SklepId)
             @Html.DropDownListFor(s => s.KartaKontaktu.SklepId, new SelectList(Model.Skleps, "Id", "Nazwa"), "Wybierz sklep", new { @class = "form-control" })
-            @Html.ValidationMessageFor(s => s.KartaKontaktu.Id)
+            @Html.ValidationMessageFor(s => s.KartaKontaktu.SklepId)
         </div>
 
         <div class="form-group">
@@ -39,16 +39,18 @@
                     <span class="glyphicon glyphicon-time"></span>
                 </span>
             </div>
+            @Html.ValidationMessageFor(s => s.KartaKontaktu.DataSpotkania)
+        </div>
+
+        <div class="form-group">
+            <p> @Html.RadioButtonFor(m => m.KartaKontaktu.FormaKontaktu, "Email")E-mail</p>
+            <p> @Html.RadioButtonFor(m => m.KartaKontaktu.FormaKontaktu, "Telefon")Telefon</p>
+            <p> @Html.RadioButtonFor(m => m.KartaKontaktu.FormaKontaktu, "Spotkanie")Spotkanie</p>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(s => s.KartaKontaktu.Notatki)
             @Html.TextAreaFor(s => s.KartaKontaktu.Notatki, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            <p> @Html.RadioButtonFor(m => m.KartaKontaktu.FormaKontaktu, "Email")E-mail</p>
-            <p> @Html.RadioButtonFor(m => m.KartaKontaktu.FormaKontaktu, "Telefon")Telefon</p>
-            <p> @Html.RadioButtonFor(m => m.KartaKontaktu.FormaKontaktu, "Spotkanie")Spotkanie</p>
         </div>
         <br />
             @Html.HiddenFor(s => s.KartaKontaktu.Id)
@@ -68,9 +70,7 @@
 
             });
         </script>
-
     }
 </body>
-
 </html>
 
