--- a/Views/Sklep/Index.cshtml
+++ b/Views/Sklep/Index.cshtml
@@ -18,7 +18,7 @@ else
         <tr>
             <th>Sklep</th>
             <th>Kontakt</th>
-            <th>Typ sklepu</th>
+            <th>Proponowana umowa</th>
             <th>Akcja</th>
         </tr>
     </thead>
