--- a/Views/KartaKontaktu/Index.cshtml
+++ b/Views/KartaKontaktu/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model System.Collections.Generic.List<KartaPracy.Models.KartaKontaktu>
+﻿@using System.Web.Mvc.Html
+@model System.Collections.Generic.List<KartaPracy.Models.KartaKontaktu>
 
 @{
     ViewBag.Title = "Karta Pracy";
@@ -7,7 +8,7 @@
 
 <h2>Plan Pracy </h2>
 
-<p>@Html.ActionLink("Dodaj nowe zdarzenie", "New", "KartaKontaktu", null, new { @class = "btn btn-primary" })</p>
+<p>@Html.ActionLink("Dodaj nową wizytę", "New", "KartaKontaktu", null, new { @class = "btn btn-primary" })</p>
 
 
 @if (!Model.Any())
@@ -27,10 +28,11 @@ else
     <table id="zdarzenia" class="table table-bordered table-hover">
             <thead>
                 <tr>
-                    <th>Id</th>
+                    
                     <th>Sklep</th>
                     <th>Data</th>
                     <th>Forma kontaktu</th>
+                    <th>Nr spotkania</th>
                     <th>Miejscowość</th>
                     <th>Notatki</th>
                     <th>Akcja</th>
@@ -40,10 +42,11 @@ else
                 @foreach (var zdarzenie in Model)
                 {
                     <tr>
-                        <td>@zdarzenie.Id</td>
-                        <td>@zdarzenie.Sklep.Nazwa</td>
+                        <td>@Html.ActionLink(zdarzenie.Sklep.Nazwa, "Details", "KartaKontaktu", new {id = zdarzenie.Id}, null)</td>
+                        
                         <td>@zdarzenie.DataSpotkania</td>
                         <td>@zdarzenie.FormaKontaktu</td>
+                        <td>@zdarzenie.NrSpotkania</td>
                         <td>@zdarzenie.Sklep.Miejscowosc</td>
                         <td>@zdarzenie.Notatki</td>
                         <td><button data-zdarzenie-id="@zdarzenie.Id" class="btn-link js-delete">Delete</button>@Html.ActionLink("Edytuj", "Edit", "KartaKontaktu", new { id = zdarzenie.Id }, null)</td>
@@ -61,7 +64,7 @@ else
             $("#zdarzenia").on("click", ".js-delete", function () {
                 var button = $(this);
 
-                bootbox.confirm("Czy na pewno chcesz usunąć zdarzenie? ", function (result) {
+                bootbox.confirm("Czy na pewno chcesz usunąć wizytę? ", function (result) {
                     if (result) {
                         $.ajax({
                             url: "/api/KartaKontaktu/" + button.attr("data-zdarzenie-id"),
